# fastBLAS

./: .gitignore  CMakeLists.txt  README.md  main.cpp
benchmark/: gpu_gemm.cpp
cpu/: CMakeLists.txt  JOURNEY.md
cpu/benchmark/: bench_gemm.cpp
cpu/include/: blas.h
cpu/src/level3/: gemm_naive.cpp  gemm_reg.cpp  gemm_reorder.cpp
cpu/test/: test_gemm.cpp
gpu/: JOURNEY_GPU.md
gpu/src/blas/: gemm.cpp
gpu/src/kernels/gemm/: gemm_shared_doublebuf.wgsl  gemm_tiled_32x8.wgsl
include/wgpublas/: buffer.h
src/kernels/gemm/: gemm_naive.wgsl  gemm_tiled_16x16.wgsl
src/utils/: timer.cpp
